--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,82 @@
-body {
-	background: #607D8B;
+* {
+	margin: 0;
+	padding: 0;
 }
+
+
+body {
+	background: #fff;
+	font-size: 16px;
+
+
+}
+
+
+
+.Header {
+
+	
+	}
+
+
+.menu {
+	background: #141414;
+	height:5em; 
+	border-color: #2e2f33;
+	margin: 0 auto;
+	border-radius: 2px;
+
+	
+}
+
+
+
+.lista {
+	list-style: none;
+	text-align: center;
+	  
+
+}
+
+
+.item {
+	display: inline-block;
+	text-align: center;
+	margin-top: 30px;
+	
+}
+
+
+
+
+.nav-search {
+	width: 16em;
+	height: 2em;
+
+  -webkit-border-radius:4px;
+     -moz-border-radius:4px;
+          border-radius:4px;
+}
+
+
+
+
+
+.letras {
+	text-decoration: none;
+	font-family: Helvetica;
+	color: #fff;
+
+	padding: 29px 25px 27px;
+	font-size: 14px;
+	font-weight: lighter;
+	text-transform: uppercase;
+	text-rendering: optimizeLegibility;
+	text-shadow: 0 0 0.1em #4D94DE;
+
+
+
+}
+
+
+
