--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,7 +31,7 @@ background: #141414;
 	text-decoration: none;
 	padding: 30px 30px;
 	display: block;
-	font-weight: bold;
+	font-weight: lighter;
 	font-size: 22px;
 	color: #fff
 }
@@ -71,7 +71,6 @@ background: #141414;
 
 
 
-
 .registro {
 	display: inline-block;
 	position: absolute;
@@ -85,6 +84,7 @@ background: #141414;
 .letrasm:hover {
 	background: #C9BFB2;
 	color: black;
+	
 }
 
 
@@ -92,5 +92,138 @@ background: #141414;
 .iniciar:hover,
 .registro:hover
  {
-	color:red;
+	color:#00C2FF;
+}
+
+
+
+.seccion {
+	width: 100%;
+	height:500px;
+	display: block;
+
+
+	background: #607D8B url("../img/fond.jpg");
+	background-size:100% 500px;
+	background-repeat: no-repeat;
+}
+
+
+
+.figure1
+ {
+	display: block;
+	margin:0;
+	
+	position: relative;
+	
+}
+
+.img1 {
+	width: 200px; 
+	height:200px;
+	position: relative;
+	margin: 5px;
+	
+}
+
+
+.img2 {
+	display: block;
+	margin: 5px;
+
+	
+	
+}
+
+
+
+
+.figure2 {
+	display: block;
+	margin:0;
+	position: relative;
+	 	
+
+}
+
+
+
+
+
+
+.img3 {
+	width: 200px; 
+	height:200px;
+	position: relative;
+	margin: 5px;
+	
+}
+
+.img4 {
+
+	width: 200px; 
+	height:200px;
+	position: relative;
+	margin: 5px;
+
+
+}
+
+.letra {
+	margin: 0;
+	font-size: 37px;
+	display: inline-block;
+	position: absolute;
+	left: 50%;
+	top: 40px;
+	font-family: 'Russo One', sans-serif;
+	
+}
+   
+
+.parrafo {
+	margin: 0;
+	width: 24em;
+	font-size: 25px;
+	display: inline-block;
+	position: absolute;
+	left:23em;
+	top:4em;
+	
+	text-align: justify;
+	font-family: 'Courgette', cursive;
+
+
+}
+
+
+
+.caja {
+	position: absolute;
+	width: 500px;
+	height: 250px;
+	left: 37em;
+	top: 0;
+	border-radius: 20px;
+	background: gray url(../img/cali.jpg);
+	background-size: cover;
+
+	animation:slider 10s infinite alternate;
+}
+
+
+@keyframes slider {
+	from {
+		background-size: 700px;
+		background-position: left center;
+
+	}
+
+	to {
+
+		background-position: right center;
+		background-size: 1200px;
+
+	}
 }
