--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,7 @@
 
 body {
 	font-size: 16px;
+	overflow-x: hidden;
 }
 
 
@@ -11,7 +12,7 @@ nav {
 display: block;
 background:gray;
 position: relative;
-background: #141414;
+background: #070D12;
 
 
 }
@@ -50,9 +51,7 @@ background: #141414;
 	height: 2em;
 
 
-  -webkit-border-radius:4px;
-     -moz-border-radius:4px;
-          border-radius:4px;
+
 }
 
 
@@ -110,73 +109,60 @@ background: #141414;
 
 
 
+.articulo1 {
+	display: block;
+	position: relative;
+}
+
+
+
+
 .figure1
  {
-	display: block;
+	display: inline-block;
 	margin:0;
 	
-	position: relative;
+	position: absolute;
+	
 	
 }
+
+
+
 
 .img1 {
 	width: 200px; 
 	height:200px;
-	position: relative;
 	margin: 5px;
-	
 }
 
 
 .img2 {
-	display: block;
 	margin: 5px;
-
-	
-	
 }
 
 
 
 
-.figure2 {
-	display: block;
-	margin:0;
-	position: relative;
-	 	
+.aside {
+	display: inline-block;
+	position: absolute;
 
-}
-
-
-
-
-
-
-.img3 {
-	width: 200px; 
-	height:200px;
-	position: relative;
-	margin: 5px;
+	margin: 0;
+	top: 3em;
+	left: 46%;
 	
 }
 
-.img4 {
-
-	width: 200px; 
-	height:200px;
-	position: relative;
-	margin: 5px;
-
-
-}
 
 .letra {
 	margin: 0;
 	font-size: 37px;
 	display: inline-block;
-	position: absolute;
-	left: 50%;
-	top: 40px;
+	position: relative;
+	left: 4em;
+	
+	top: 0em;
 	font-family: 'Russo One', sans-serif;
 	
 }
@@ -187,11 +173,9 @@ background: #141414;
 	width: 24em;
 	font-size: 25px;
 	display: inline-block;
-	position: absolute;
-	left:23em;
-	top:4em;
-	
 	text-align: justify;
+	top: 2em;
+	left: 1em;
 	font-family: 'Courgette', cursive;
 
 
@@ -199,17 +183,55 @@ background: #141414;
 
 
 
-.caja {
+
+
+.articulo2 {
+	display: block;
+	position: relative;
+	background: red;
+	top: 50%;
+
+	
+}
+
+
+.figure2 {
 	position: absolute;
+	display: inline-block;
+	margin:0;
+	
+}
+
+
+.img3 {
+	width: 200px; 
+	height:200px;
+	margin: 5px;
+	
+	
+}
+
+.img4 {
+
+	width: 200px; 
+	height:200px;
+	margin: 5px;
+}
+
+
+.caja {
+
+	position: absolute;
+	display: inline-block;
 	width: 500px;
-	height: 250px;
-	left: 37em;
+	height: 200px;
+	left:600px;
 	top: 0;
 	border-radius: 20px;
-	background: gray url(../img/cali.jpg);
+	background: url(../img/calii.jpg);
 	background-size: cover;
 
-	animation:slider 10s infinite alternate;
+	animation:slider 7s infinite alternate;
 }
 
 
@@ -223,7 +245,71 @@ background: #141414;
 	to {
 
 		background-position: right center;
-		background-size: 1200px;
+		background-size: 700px;
 
 	}
 }
+
+
+
+}
+
+
+
+
+
+.piedepagina {
+	background: #FAFCFB;
+	display: block;
+	width: 100%;
+	height: 15em;
+}
+
+
+.seccionfoter{
+	position: relative;
+}
+
+
+
+.contact {
+	position: absolute;
+	top:2em;
+	left:5em;
+	display: inline-block;
+
+
+}
+
+.titlecontactenos{
+	font-size: 20px;
+	font-family: Laksaman;
+	font-weight: bold;
+	border-bottom: 1px solid gray;
+
+}
+
+
+
+
+
+.acerc
+{
+	position: absolute;
+	display: inline-block;
+	top: 2em;
+	left: 30em;
+}
+
+
+.titleacerc 
+	{
+	font-size: 20px;
+	font-family: Laksaman;
+	font-weight: bold;
+	border-bottom: 1px solid gray;
+
+}
+
+
+
