--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?21397500');
-  src: url('../font/fontello.eot?21397500#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?21397500') format('woff'),
-       url('../font/fontello.ttf?21397500') format('truetype'),
-       url('../font/fontello.svg?21397500#fontello') format('svg');
+  src: url('../font/fontello.eot?76749122');
+  src: url('../font/fontello.eot?76749122#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?76749122') format('woff'),
+       url('../font/fontello.ttf?76749122') format('truetype'),
+       url('../font/fontello.svg?76749122#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?21397500#fontello') format('svg');
+    src: url('../font/fontello.svg?76749122#fontello') format('svg');
   }
 }
 */
@@ -54,17 +54,31 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-search:before { 
-color:gray;
+.icon-user:before { content: '\e800'; } /* '' */
+.icon-mail-alt:before { content: '\e801'; } /* '' */
+.icon-phone:before { content: '\e802'; } /* '' */
+.icon-cog:before { content: '\e803'; } /* '' */
+.icon-resize-full-alt:before { content: '\e804'; } /* '' */
+.icon-basket:before { content: '\e805'; } /* '' */
+.icon-dollar:before { content: '\e806'; } /* '' */
+.icon-git-squared:before { content: '\e807'; } /* '' */
+.icon-gplus-squared:before { content: '\e808'; } /* '' */
+.icon-twitter:before { content: '\e809'; } /* '' */
+.icon-whatsapp:before { content: '\e80a'; } /* '' */
+.icon-chat:before { content: '\e80b'; } /* '' */
+.icon-menu:before { content: '\e80c'; } /* '' */
+.icon-search:before { color:gray;
   right: 0;
   top: 0;
   position: absolute;
   right: 0;
   top: 0.5em;
-
-
-  content: '\e800'; } /* '' */
-.icon-home:before { content: '\e801'; } /* '' */
-.icon-dollar:before { content: '\e802'; } /* '' */
-.icon-laptop:before { content: '\e803'; } /* '' */
-.icon-location:before { content: '\e804'; } /* '' */
+content: '\e80d'; } /* '' */
+.icon-mail:before { content: '\e80e'; } /* '' */
+.icon-user-1:before { content: '\e80f'; } /* '' */
+.icon-headphones:before { content: '\e810'; } /* '' */
+.icon-thumbs-up:before { content: '\e811'; } /* '' */
+.icon-thumbs-down:before { content: '\e812'; } /* '' */
+.icon-youtube:before { content: '\e813'; } /* '' */
+.icon-home:before { content: '\e814'; } /* '' */
+.icon-facebook-squared:before { content: '\e815'; } /* '' */
