--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?76749122');
-  src: url('../font/fontello.eot?76749122#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?76749122') format('woff'),
-       url('../font/fontello.ttf?76749122') format('truetype'),
-       url('../font/fontello.svg?76749122#fontello') format('svg');
+  src: url('../font/fontello.eot?42506551');
+  src: url('../font/fontello.eot?42506551#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?42506551') format('woff'),
+       url('../font/fontello.ttf?42506551') format('truetype'),
+       url('../font/fontello.svg?42506551#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?76749122#fontello') format('svg');
+    src: url('../font/fontello.svg?42506551#fontello') format('svg');
   }
 }
 */
@@ -67,13 +67,13 @@
 .icon-whatsapp:before { content: '\e80a'; } /* '' */
 .icon-chat:before { content: '\e80b'; } /* '' */
 .icon-menu:before { content: '\e80c'; } /* '' */
-.icon-search:before { color:gray;
+.icon-search:before { 
+  color:gray;
   right: 0;
   top: 0;
   position: absolute;
   right: 0;
-  top: 0.5em;
-content: '\e80d'; } /* '' */
+  top: 0.5em;content: '\e80d'; } /* '' */
 .icon-mail:before { content: '\e80e'; } /* '' */
 .icon-user-1:before { content: '\e80f'; } /* '' */
 .icon-headphones:before { content: '\e810'; } /* '' */
@@ -82,3 +82,6 @@ content: '\e80d'; } /* '' */
 .icon-youtube:before { content: '\e813'; } /* '' */
 .icon-home:before { content: '\e814'; } /* '' */
 .icon-facebook-squared:before { content: '\e815'; } /* '' */
+.icon-help-circled:before { content: '\e816'; } /* '' */
+.icon-globe:before { content: '\e817'; } /* '' */
+.icon-note:before { content: '\e818'; } /* '' */
